--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
   },
   "require": {
     "php": "7.*|8.*",
-    "guzzlehttp/guzzle": "^5.0|^6.0|^7.0|^7.5",
+    "guzzlehttp/guzzle": "^5.0|^6.0|7.*",
     "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0",
     "symfony/http-foundation": "^v5.0|v6.0|v6.1",
-    "vlucas/phpdotenv": "^4.0|5.4.x-dev"
+    "vlucas/phpdotenv": "^4.0|5.*"
   },
   "config": {
     "sort-packages": true
