--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "require": {
     "php": "7.*|8.*",
     "guzzlehttp/guzzle": "^5.0|^6.0|7.*",
-    "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0.*|^11.0.*",
+    "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
     "symfony/http-foundation": "^v5.0.*|v6.0.*|v6.1.*|v7.0.*|v7.1.*",
     "vlucas/phpdotenv": "^4.0|5.*"
   },
